# claude-rdsAgent

./: .env.example  .gitignore  CLAUDE.md  README.md  manage.py  pyproject.toml  pytest.ini
docs/: AGENT_USAGE_GUIDE.md
docs/architecture/: README.md
knowledge/mysql/: architecture.md  parameters.md  performance.md  troubleshooting.md
scripts/: demo.py  init_knowledge.py  run_tests.py
src/rds_agent/: __init__.py  cli.py  main.py
src/rds_agent/agent/: __init__.py  base.py  evaluator.py  iteration.py  memory.py  reflection.py  state.py  tool_executor.py
src/rds_agent/api/: __init__.py  app.py
src/rds_agent/core/: __init__.py  agent.py  nodes.py  prompts.py  state.py
src/rds_agent/diagnostic/: __init__.py  agent.py  checks.py  nodes.py  parameter_optimizer.py  report_generator.py  state.py
src/rds_agent/django_project/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
src/rds_agent/hermes/: __init__.py  agent.py  client.py  function_schema.py  tools.py
src/rds_agent/management/: __init__.py
src/rds_agent/memory/: __init__.py
src/rds_agent/router/: __init__.py  agent.py  classifier.py
tests/: conftest.py  test_integration.py
tests/test_agent/: __init__.py  test_agent.py  test_diagnostic_agent.py  test_diagnostic_checks.py  test_diagnostic_state.py  test_diagnostic_tools.py  test_evaluator.py  test_iteration.py  test_iteration_integration.py  test_memory.py  test_nodes.py  test_reflection.py  test_state.py  test_tool_executor.py
tests/test_django/: conftest.py
tests/test_hermes/: __init__.py  test_hermes_agent.py
tests/test_integration/: __init__.py  conftest.py  test_full_flow.py  test_iteration_integration.py
tests/test_router/: __init__.py  test_classifier.py  test_router_agent.py
tests/test_scheduler/: conftest.py  test_alert_engine.py  test_executor.py  test_history_store.py  test_notification.py  test_state.py
tests/test_skills/: __init__.py  test_cpu_skill.py  test_skill_parser.py
tests/test_tools/: __init__.py  test_instance_platform.py  test_models.py  test_mysql_client.py  test_tools.py  test_vector_store.py
(+70 files in other folders)
